se añadió página de contacto, formulario y actualización css

--- a/css/styles.css
+++ b/css/styles.css
@@ -124,3 +124,24 @@ footer{
     text-align: justify;
     padding: 0 5em 0 0;
 }
+
+.contact-container{
+    margin-left: 5em;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-template-rows: repeat(2,1fr);
+    grid-gap: 2em;
+    align-items: center;
+    justify-content: center;
+}
+
+#contactUs{
+    text-align: justify;
+    padding: 3em 10em 0em 10em;
+}
+
+#formContact{
+    text-align: justify;
+    padding: 3em 5em 0em 0em;
+}
+
