--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -3,26 +3,24 @@
     height: 37rem;
     margin-bottom: 2.5em;
     margin-top: 2.5em;
+    margin-left: 2.5em;
 }
 .card-button{
     position: absolute;
     bottom:0.8em;
 }
 
-#mainCard{
-    justify-content: space-around;
-    align-items: center;
-}
-
 .card-title{
     margin: 0px;
 }
+
 .card-body{
     display: flex;
     align-items: center;
     justify-items: center;
     flex-direction: column;
 }
+
 .card-icons{
     width: 100%;
     display: flex;
@@ -30,11 +28,6 @@
     justify-items: center;
 }
 
-a{
-   color: inherit;
-   text-decoration:none;
-}
-
-a:hover{
-    color: rgb(207, 207, 207);
+#cardRow{
+    width: 100%;
 }
