--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,34 +1,44 @@
 input[type="search"]::-webkit-search-decoration,
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration { display: none; }
+input[type="search"]::-webkit-search-results-decoration {
+    display: none;
+}
+
+nav{
+    background-color: #FAFAFA;
+}
 
 @font-face {
     font-family: Exo;
     src: url(../fonts/static/Exo-SemiBold.ttf);
 }
 
-.navbar{
-    background-color: #FAFAFA;
-    position: sticky;
-    top: 0;
-    z-index: 9;
-}
-
-.main-headers{
-    text-align: center;
-
-}
-
-#input-wrapper{
+.nav-item{
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 25em;
-    height: 6em;
+    margin-top: 1.25em;
+    margin-bottom: 1.25em;
 }
 
-#searchInput{
+.nav:hover {
+    color: rgb(179, 178, 178);
+}
+
+#searchButton:hover {
+    border: #000000 2px solid;
+    border-radius: 50%;
+}
+
+#cancelSearch {
+    background-color: transparent;
+    box-shadow: 0px 0px 0px transparent;
+    border: 0px solid transparent;
+    text-shadow: 0px 0px 0px transparent;
+    transform: translateX(15.5em);
+}
+
+#searchInput {
     height: 3em;
     color: #000000;
     padding: 0px 40px 0px 10px;
@@ -38,17 +48,8 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.226);
 }
 
-#iconSearch{
-    color: #191919;
-    background-color: transparent;
-}
 
-#cancelSearchIcon{
-    background-color: transparent;
-}
-
-
-#searchButton{
+#searchButton {
     width: 3em;
     height: 3em;
     border-radius: 50%;
@@ -56,50 +57,30 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
     box-shadow: 0px 0px 0px transparent;
     border: 0px solid transparent;
     text-shadow: 0px 0px 0px transparent;
-    transform: translateX(1vw);
-}
-
-#searchButton:hover{
-    border:#000000 2px solid;
-    border-radius: 50%;
-}
-
-#cancelSearch{
-    background-color: transparent;
-    box-shadow: 0px 0px 0px transparent;
-    border: 0px solid transparent;
-    text-shadow: 0px 0px 0px transparent;
-    transform: translateX(18.5vw);
-}
-
-#pageLogo{
-    margin-left: 5em;
-}
-
-#menuNav{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.nav{
-    font-size: 17px;
-    font-weight: bolder;
-    font-family: Exo;
-
-}
-
-.nav:hover{
-    color: rgb(179, 178, 178);
 }
 
 #user-wrapper{
     display: flex;
     flex-direction: row;
-    width: 150px;
-    height: 6em;
-    margin-right: 50px;
     justify-content: space-around;
-    align-items: center;
 }
+
+@media(min-width:992px){
+    
+
+}
+
+@media (min-width: 767px) and (max-width: 991px){
+    #navItem{
+        font-size: 1.5em;
+    }
+
+    #cancelSearch {
+        transform: translateX(28.5em);
+    }
+    #userIcon, #shoppingCart{
+        width: 50px;
+    }
+}
+
+
