--- a/css/styles.css
+++ b/css/styles.css
@@ -9,4 +9,15 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 }
 body{
     font-family: Exo;
+    margin:0;
+    width: 100%;
 }
+
+a{
+    color: inherit;
+    text-decoration:none;
+ } 
+ 
+ a:hover{
+    color: rgb(207, 207, 207);
+ }
