--- a/css/navbar.css
+++ b/css/navbar.css
@@ -25,38 +25,13 @@ nav{
     color: rgb(179, 178, 178);
 }
 
-#searchButton:hover {
-    border: #000000 2px solid;
-    border-radius: 50%;
-}
-
-#cancelSearch {
-    background-color: transparent;
-    box-shadow: 0px 0px 0px transparent;
-    border: 0px solid transparent;
-    text-shadow: 0px 0px 0px transparent;
-    transform: translateX(15.5em);
-}
-
 #searchInput {
-    height: 3em;
     color: #000000;
+    width: 80%;
     padding: 0px 40px 0px 10px;
-    width: 100%;
     border: none;
     border-radius: 8px;
     box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.226);
-}
-
-
-#searchButton {
-    width: 3em;
-    height: 3em;
-    border-radius: 50%;
-    background-color: rgba(128, 128, 128, 0.459);
-    box-shadow: 0px 0px 0px transparent;
-    border: 0px solid transparent;
-    text-shadow: 0px 0px 0px transparent;
 }
 
 #user-wrapper{
@@ -65,8 +40,11 @@ nav{
     justify-content: space-around;
 }
 
-@media(min-width:992px){
-    
+@media(min-width:1028px){
+    #mainContainer{
+        
+    }
+
 
 }
 
@@ -75,11 +53,24 @@ nav{
         font-size: 1.5em;
     }
 
-    #cancelSearch {
-        transform: translateX(28.5em);
-    }
     #userIcon, #shoppingCart{
         width: 50px;
+    }
+
+    .nav-item{
+        display: flex;
+        justify-content: center;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    #searchInput {
+        color: #000000;
+        width: 80%;
+        padding: 0px 40px 0px 10px;
+        border: none;
+        border-radius: 8px;
+        box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.226);
     }
 }
 
