--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -1,9 +1,20 @@
+@font-face {
+    font-family: Exo;
+    src: url(../fonts/static/Exo-SemiBold.ttf);
+}
+
+body{
+    font-family: Exo;
+}
+
+
 .card{
     width: 24rem;
-    height: 37rem;
+    min-height: 40rem;
     margin-bottom: 2.5em;
     margin-top: 2.5em;
-    margin-left: 2.5em;
+    margin-left: 0.5em;
+    margin-right: 1.25em;
 }
 .card-button{
     position: absolute;
