--- a/css/navbar.css
+++ b/css/navbar.css
@@ -5,73 +5,92 @@ input[type="search"]::-webkit-search-results-decoration {
     display: none;
 }
 
-nav{
-    background-color: #FAFAFA;
-}
-
 @font-face {
     font-family: Exo;
     src: url(../fonts/static/Exo-SemiBold.ttf);
 }
 
-.nav-item{
-    display: flex;
-    justify-content: center;
-    margin-top: 1.25em;
-    margin-bottom: 1.25em;
+nav{
+    background-color: #FAFAFA;
+    font-family: Exo;
 }
 
-.nav:hover {
-    color: rgb(179, 178, 178);
+.nav-link{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 30px;
+    color: black;
 }
 
-#searchInput {
-    color: #000000;
-    width: 80%;
-    padding: 0px 40px 0px 10px;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.226);
+.d-flex{
+    width: 100%;
 }
 
-#user-wrapper{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-@media(min-width:1028px){
-    #mainContainer{
-        
+@media(min-width:320px){
+    .iconNav{
+        padding: 0px 15px 0px 15px;
     }
 
-
 }
 
-@media (min-width: 767px) and (max-width: 991px){
-    #navItem{
-        font-size: 1.5em;
+@media(min-width:425px){
+    .iconNav{
+        padding: 0px 30px 0px 30px;
+    }
+    
+}
+
+@media(min-width:768px){
+    .iconNav{
+        padding: 0px 45px 0px 45px;
+    }
+}
+
+@media(min-width:1280px){
+    .navbar-brand{
+        margin-left:50px;
+        margin-right: 150px;
     }
 
-    #userIcon, #shoppingCart{
-        width: 50px;
+    .iconNav{
+        padding:0px 20px 0px 20px;
+    }
+
+    #user-wrapper{
+        position: absolute;
+        margin-left:850px
+    }
+
+    .d-flex{
+        width: 20%;
+    }
+}
+
+@media(min-width:1440px){
+    #user-wrapper{
+        position: absolute;
+        left:75px;
+    }
+    .nav-item{
+        margin-left: 10px;
+    }
+}
+
+@media(min-width:1920px){
+    #user-wrapper{
+        position: absolute;
+        left:450px;
+    }
+
+    .navbar-brand{
+        margin-left:80px;
     }
 
     .nav-item{
-        display: flex;
-        justify-content: center;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    #searchInput {
-        color: #000000;
-        width: 80%;
-        padding: 0px 40px 0px 10px;
-        border: none;
-        border-radius: 8px;
-        box-shadow: 4px 4px 4px 2px rgba(0, 0, 0, 0.226);
+        margin-left: 50px;
     }
 }
+
+
 
 
