Se creó la página para agregar productos nuevos y se modifico la fuente de los body

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,7 +9,9 @@ input[type="search"]::-webkit-search-results-decoration {
     font-family: Exo;
     src: url(../fonts/static/Exo-SemiBold.ttf);
 }
-
+body{
+    font-family: Exo;
+}
 nav{
     background-color: #FAFAFA;
     font-family: Exo;
