--- a/css/index.css
+++ b/css/index.css
@@ -1,31 +1,85 @@
+body {
+  min-height: 100vh;
+}
+
 .cards-wrapper {
     display: flex;
     justify-content: center;
   }
-  .card img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-  .card {
-    margin: 0 0.5em;
-    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
-    border: none;
-    border-radius: 0;
-  }
-  .carousel-inner {
-    padding: 1em;
-  }
-  .carousel-control-prev,
-  .carousel-control-next {
-    background-color: #e1e1e1;
-    width: 5vh;
-    height: 5vh;
-    border-radius: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-  @media (min-width: 768px) {
-    .card img {
-      height: 11em;
-    }
-  }
+.card img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.card {
+  margin: 0 0.5em;
+  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+  border: none;
+  border-radius: 0;
+}
+
+.carousel-inner {
+  padding: 1em;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+  background-color: #e1e1e1;
+  width: 5vh;
+  height: 5vh;
+  border-radius: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.products-carousel {
+  display: flex;
+  max-width: 100%;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.products-container {
+  width: 90%;
+  padding: 10px 40px;
+  margin-top: 2rem;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  position: relative;
+  text-align: start;
+  font-size: 18px;
+  background: #fff;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.card-description {
+  padding: 1rem;
+}
+
+.card-title, .card-text {
+  margin-bottom: 0.5rem;
+}
+
+.swiper-button-next {
+  right: 26px !important;
+}
+
+.swiper-button-prev {
+  left: 26px !important;
+}
+
+.card-body a {
+  width: 100%;
+}
