Html y css de página de registro de usuario

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,5 +1,14 @@
 @font-face {
     font-family: Exo;
+    src: url(../fonts/static/Exo-Regular.ttf);
+}
+@font-face {
+    font-family: ExoBold;
+    src: url(../fonts/static/Exo-Bold.ttf);
+}
+
+@font-face {
+    font-family: ExoSemiBold;
     src: url(../fonts/static/Exo-SemiBold.ttf);
 }
 body{
@@ -7,7 +16,7 @@ body{
 }
 nav{
     background-color: #FAFAFA;
-    font-family: Exo;
+    font-family: ExoSemiBold;
 }
 
 .nav-link{
