--- a/css/registro.css
+++ b/css/registro.css
@@ -28,3 +28,9 @@ main .form-control {
     padding-left: 0;
     padding-right: 0;
 }
+
+
+main .form-control{
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
