Modificación de estilos y logo

--- a/css/contact.css
+++ b/css/contact.css
@@ -11,6 +11,11 @@ textarea:focus, input:focus{
     outline: none;
 }
 
+.box .form-control {
+    border-radius: 0;
+    border: 1px black solid;
+}
+
 #banner{
     display: flex;
     background-image:url("/Fotos_pagina/pink-makeup.png");
