--- a/css/registro.css
+++ b/css/registro.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: Exo;
+    src: url(../fonts/static/Exo-SemiBold.ttf);
+}
+
+@font-face {
+    font-family: Exo;
+    src: url(../fonts/static/Exo-Regular.ttf);
+}
 
 h1{
     text-align: center;
@@ -34,3 +43,4 @@ main .form-control{
     margin-bottom: 30px;
     margin-top: 30px;
 }
+
