--- a/css/index.css
+++ b/css/index.css
@@ -22,10 +22,6 @@ h1{
   border-radius: 0;
 }
 
-.carousel-inner {
-  padding: 1em;
-}
-
 .carousel-control-prev,
 .carousel-control-next {
   background-color: #e1e1e1;
@@ -67,6 +63,7 @@ h1{
   height: auto;
   object-fit: cover;
   border-radius: 50%;
+  backface-visibility: none;
 }
 
 .card-description {
@@ -91,4 +88,55 @@ h1{
 
 .card-body a {
   width: 100%;
+}
+
+.hearts-outer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  left: 0;
+}
+
+.hearts-inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0;
+}
+
+.hearts-outer::before {
+  content: "\f004   \f004   \f004   \f004";
+  font-family: "Font Awesome 5 Free";
+  font-size: 24px;
+  font-weight: 900;
+  color: #ccc;
+}
+
+.hearts-inner::before {
+  content: "\f004   \f004   \f004   \f004";
+  font-family: "Font Awesome 5 Free";
+  font-size: 24px;
+  font-weight: 900;
+  color: #6C4AB6;
+}
+
+#addCartProd{
+  position: relative;
+  bottom: 0;
+}
+
+.card-title{
+  height: 50px;
+}
+
+.card-price{
+  font-family: ExoBold;
+  color: #6C4AB6;
+  text-align: center;
 }
