Ajuste de tamanio de imagen en navbar e iconos

--- a/css/index.css
+++ b/css/index.css
@@ -24,10 +24,9 @@ h1{
 
 .carousel-control-prev,
 .carousel-control-next {
-  background-color: #e1e1e1;
+  background-color: none;
   width: 5vh;
   height: 5vh;
-  border-radius: 50%;
   top: 50%;
   transform: translateY(-50%);
 }
