--- a/css/navbar.css
+++ b/css/navbar.css
@@ -34,6 +34,9 @@ nav{
     .iconNav{
         padding: 0px 15px 0px 15px;
     }
+    .navbar-brand img{
+        width: 100px;
+    }
 
 }
 
@@ -41,12 +44,21 @@ nav{
     .iconNav{
         padding: 0px 30px 0px 30px;
     }
+    .navbar-brand img{
+        width: 100px;
+    }
     
 }
 
 @media(min-width:768px){
     .iconNav{
         padding: 0px 45px 0px 45px;
+    }
+    .iconNav img{
+        width: 40px;
+    }
+    .navbar-brand img{
+        width: 120px;
     }
 }
 
