--- a/css/maquillaje.css
+++ b/css/maquillaje.css
@@ -1,3 +1,9 @@
+body {
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: auto 1fr auto;
+}
+
 #leftBox {
     height: 80vh;
     width: 20%;
