--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -5,6 +5,13 @@
 
 body{
     font-family: Exo;
+    display: grid;
+    min-height: 100vh;
+    grid-template-rows: auto 1fr auto;
+}
+
+main {
+    margin: 1rem 0;
 }
 
 
@@ -16,6 +23,7 @@ body{
     margin-right: 1.25rem;
     margin-left: 1.25rem;
 }
+
 .card-button{
     position: absolute;
     bottom:0.8em;
@@ -42,4 +50,14 @@ body{
 #cardRow{
     width: 100%;
     margin: 0px 0px 0px 0px;
+}
+
+.btn-dark:hover {
+    border: 2px solid #212529;
+    background-color: white;
+    color: #212529;
+}
+
+#descripcion {
+    margin-top: 1rem;
 }
