--- a/css/maquillaje.css
+++ b/css/maquillaje.css
@@ -11,11 +11,6 @@ body {
     display: none;
 }
 
-#mainContainer {
-    margin-right: 50;
-    margin-left: 50;
-}
-
 #leftBoxBottom{
     display: flex;
     justify-content: center;
@@ -31,3 +26,59 @@ body {
     position: relative;
     top:510px;
 }
+
+.hearts-outer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 0;
+  }
+  
+  .hearts-inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0;
+  }
+  
+  .hearts-outer::before {
+    content: "\f004   \f004   \f004   \f004";
+    font-family: "Font Awesome 5 Free";
+    font-size: 24px;
+    font-weight: 900;
+    color: #ccc;
+  }
+  
+  .hearts-inner::before {
+    content: "\f004   \f004   \f004   \f004";
+    font-family: "Font Awesome 5 Free";
+    font-size: 24px;
+    font-weight: 900;
+    color: #6C4AB6;
+  }
+
+  .card-price{
+    font-family: ExoBold;
+    color: #6C4AB6;
+    text-align: center;
+  }
+
+  .card {
+    border: none;
+    border-radius: 0;
+  }
+
+.card img {
+    border-radius: 50%;
+    width: 100%;
+  }
+
+  .card-text{
+    height: 80px;
+  }
