--- a/css/index.css
+++ b/css/index.css
@@ -43,6 +43,7 @@ h1{
   width: 90%;
   padding: 10px 40px;
   margin-top: 2rem;
+  margin-bottom: 4rem;
 }
 
 .swiper {
@@ -127,13 +128,27 @@ h1{
 }
 
 .addCartProd{
+  background-color: #EFCFCF;
+  color: #1C315E;
   position: relative;
   display: flex;
   justify-content: space-around;
   bottom: 0;
+  padding: 8px 16px;
+  font-weight: bold;
+  text-decoration: none;
+  border-radius: 5%;
+}
+
+.addCartProd:hover {
+  color: #1C315E;
+  background-color: #fff;
+  border: 2px solid #EFCFCF;
+  padding: 6px 14px;
 }
 
 .card-title{
+  color: #1C315E;
   min-height: 108px;
   display: flex;
   justify-content: space-around;
