--- a/css/logIn.css
+++ b/css/logIn.css
@@ -34,14 +34,14 @@ main .form-control {
     color: #1C315E;
     border-radius: 5%;
     border: 0;
-    padding: 0.5rem 5rem;
+    padding: 0.5rem 1.5rem;
     font-weight: bold;
 }
 
 .btnLogIn:hover {
     background-color: white;
     border: 2px solid #EFCFCF;
-    padding: 0.4rem 5rem;
+    padding: 0.4rem 1.5rem;
 }
 
 .row > * {
@@ -59,11 +59,21 @@ main .form-input{
     color: red;
     margin: 0;
     padding: 0;
-    font-size: 12px;
+    font-size: 1rem;
     font-weight: bold;
     position: absolute;
 }
 
+
 p > a {
     text-decoration: none;
+}
+@media(min-width:768px){
+    .btnLogIn {
+        padding: 0.5rem 5rem;
+    }
+    
+    .btnLogIn:hover {
+        padding: 0.4rem 5rem;
+    }
 }
