Se agrego una variable de productos, y se agregaron botones en el formproductos, asi como la funcionalidad de delete

--- a/css/formProducts.css
+++ b/css/formProducts.css
@@ -62,3 +62,8 @@ body .form-control {
 form div {
     margin-bottom: 2rem;
 }
+
+.crud:hover {
+    background-color: white;
+    border: 2px solid #EFCFCF;
+}
